--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "npx zenstack generate && tsx watch app.ts"
+        "generate": "npx zenstack generate",
+        "dev": "npx zenstack generate && tsx watch app.ts",
+        "up": "npm install --save-exact -D zenstack@latest @zenstackhq/openapi@latest && npm install --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^4.11.0",
-        "@zenstackhq/runtime": "^1.0.0-alpha.79",
-        "@zenstackhq/server": "^1.0.0-alpha.79",
+        "@zenstackhq/runtime": "1.0.0-alpha.98",
+        "@zenstackhq/server": "1.0.0-alpha.98",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -28,11 +30,11 @@
         "@types/node": "^18.15.3",
         "@types/node-fetch": "^2.6.2",
         "@types/swagger-ui-express": "^4.1.3",
-        "@zenstackhq/openapi": "^1.0.0-alpha.79",
+        "@zenstackhq/openapi": "1.0.0-alpha.98",
         "openapi-typescript": "^6.2.0",
         "prisma": "^4.11.0",
         "tsx": "^3.12.5",
         "typescript": "^5.0.2",
-        "zenstack": "^1.0.0-alpha.79"
+        "zenstack": "1.0.0-alpha.98"
     }
 }
