--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "generate": "npx zenstack generate",
-        "dev": "npx zenstack generate && tsx watch app.ts",
+        "dev": "tsx watch app.ts",
         "up": "npm install --save-exact -D zenstack@latest @zenstackhq/openapi@latest && npm install --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest"
     },
     "keywords": [],
@@ -13,8 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^4.11.0",
-        "@zenstackhq/runtime": "1.0.0-alpha.102",
-        "@zenstackhq/server": "1.0.0-alpha.102",
+        "@zenstackhq/runtime": "1.0.0-alpha.113",
+        "@zenstackhq/server": "1.0.0-alpha.113",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -22,7 +22,8 @@
         "jsonwebtoken": "^9.0.0",
         "node-fetch": "^3.3.1",
         "openapi-typescript-fetch": "^1.1.3",
-        "swagger-ui-express": "^4.6.2"
+        "swagger-ui-express": "^4.6.2",
+        "zod": "3.21.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
@@ -30,11 +31,11 @@
         "@types/node": "^18.15.3",
         "@types/node-fetch": "^2.6.2",
         "@types/swagger-ui-express": "^4.1.3",
-        "@zenstackhq/openapi": "1.0.0-alpha.102",
+        "@zenstackhq/openapi": "1.0.0-alpha.113",
         "openapi-typescript": "^6.2.0",
         "prisma": "^4.11.0",
         "tsx": "^3.12.5",
         "typescript": "^5.0.2",
-        "zenstack": "1.0.0-alpha.102"
+        "zenstack": "1.0.0-alpha.113"
     }
 }
