--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
         "client": "tsx client",
         "package-clean": "npm rm zenstack @zenstackhq/openapi @zenstackhq/runtime @zenstackhq/server",
         "up": "npm run package-clean && npm install --save-exact -D zenstack@latest @zenstackhq/openapi@latest && npm install --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest",
-        "up-preview": "npm run package-clean && npm install --registry http://localhost:4873 --save-exact -D zenstack@latest @zenstackhq/openapi@latest && npm install --registry http://localhost:4873 --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest"
+        "up-preview": "npm run package-clean && npm install --registry https://dolphin-app-nyvr5.ondigitalocean.app --save-exact -D zenstack@latest @zenstackhq/openapi@latest && npm install --registry https://dolphin-app-nyvr5.ondigitalocean.app --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.2.0",
-        "@zenstackhq/runtime": "1.0.0-beta.21",
-        "@zenstackhq/server": "1.0.0-beta.21",
+        "@zenstackhq/runtime": "1.0.0-beta.23",
+        "@zenstackhq/server": "1.0.0-beta.23",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -34,11 +34,11 @@
         "@types/node": "^18.15.3",
         "@types/node-fetch": "^2.6.2",
         "@types/swagger-ui-express": "^4.1.3",
-        "@zenstackhq/openapi": "1.0.0-beta.21",
+        "@zenstackhq/openapi": "1.0.0-beta.23",
         "openapi-typescript": "^6.2.0",
         "prisma": "^5.2.0",
         "tsx": "^3.12.5",
         "typescript": "^5.0.2",
-        "zenstack": "1.0.0-beta.21"
+        "zenstack": "1.0.0-beta.23"
     }
 }
